force-app/main/default/objects/fromJavaEvent__e/fromJavaEvent__e.object-meta.xml
<CustomObject>
    <description>Platform Event generated by Agentforce</description>
    <label>fromJavaEvent</label>
</CustomObject>