force-app/main/default/objects/fromJavaEvent__e/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>Free-form message</description>
    <label>Message</label>
    <type>Text</type>
    <length>255</length>
</CustomField>