force-app/main/default/objects/fromJavaEvent__e/fields/Severity__c.field-meta.xml
<CustomField>
    <fullName>Severity__c</fullName>
    <description>Severity level</description>
    <label>Severity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Info</fullName>
                <default>true</default>
                <label>Info</label>
            </value>
            <value>
                <fullName>Warning</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
        <valueSetName/>
        <valueSetType>Restricted</valueSetType>
    </valueSet>
</CustomField>