force-app/main/default/objects/fromJavaEvent__e/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>Origin/source of the event</description>
    <label>Source</label>
    <type>Text</type>
    <length>80</length>
</CustomField>